; ModuleID = '/home/carl/AnghaBench/h2o/lib/extr_tunnel.c_close_connection.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/extr_tunnel.c_close_connection.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.st_h2o_tunnel_t = type { i32*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.st_h2o_tunnel_t*)* @close_connection to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @close_connection(%struct.st_h2o_tunnel_t* %0) #0 {
  %2 = alloca %struct.st_h2o_tunnel_t*, align 8
  store %struct.st_h2o_tunnel_t* %0, %struct.st_h2o_tunnel_t** %2, align 8
  %3 = load %struct.st_h2o_tunnel_t*, %struct.st_h2o_tunnel_t** %2, align 8
  %4 = getelementptr inbounds %struct.st_h2o_tunnel_t, %struct.st_h2o_tunnel_t* %3, i32 0, i32 1
  %5 = call i32 @h2o_timer_unlink(i32* %4)
  %6 = load %struct.st_h2o_tunnel_t*, %struct.st_h2o_tunnel_t** %2, align 8
  %7 = getelementptr inbounds %struct.st_h2o_tunnel_t, %struct.st_h2o_tunnel_t* %6, i32 0, i32 0
  %8 = load i32*, i32** %7, align 8
  %9 = getelementptr inbounds i32, i32* %8, i64 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @h2o_socket_close(i32 %10)
  %12 = load %struct.st_h2o_tunnel_t*, %struct.st_h2o_tunnel_t** %2, align 8
  %13 = getelementptr inbounds %struct.st_h2o_tunnel_t, %struct.st_h2o_tunnel_t* %12, i32 0, i32 0
  %14 = load i32*, i32** %13, align 8
  %15 = getelementptr inbounds i32, i32* %14, i64 1
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @h2o_socket_close(i32 %16)
  %18 = load %struct.st_h2o_tunnel_t*, %struct.st_h2o_tunnel_t** %2, align 8
  %19 = call i32 @free(%struct.st_h2o_tunnel_t* %18)
  ret void
}

declare dso_local i32 @h2o_timer_unlink(i32*) #1

declare dso_local i32 @h2o_socket_close(i32) #1

declare dso_local i32 @free(%struct.st_h2o_tunnel_t*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
